# svr-atlas-pdata-debugger

./: .gitignore  README.md  pyproject.toml  sample pData.txt  test_analyzer.py
atlas_debugger/: __init__.py  __main__.py  analyzer.py  chain.py  cli.py  constants.py  find_tx.py  forge_gen.py  foundry_tracer.py  parser.py  report.py  rpc.py  simulator.py  tracer.py
cache/: solidity-files-cache.json  test-failures
